data/derived/fa15/progs/unify/prog0188.ml.out
Characters 33-66:
  n = additivePersistence(n mod 10);;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
